MDEV-25155 JSON_TABLE: Status variable Feature_json is not incremented.

feature_json variable incremented.